Convert to a Jekyll project

--- a/index.html
+++ b/index.html
@@ -1,105 +1,6 @@
-<!doctype html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>C++ Samples</title>
-		<link href='http://fonts.googleapis.com/css?family=Roboto:400italic,100,700italic,700,400|Roboto+Slab' rel='stylesheet' type='text/css'>
-		<style>
-body {
-	font-family: 'Roboto';
-	font-size: 17px;
-	margin: 0;
-}
-
-.row {
-	width: 1230px;
-	margin: 0 auto;
-}
-
-.column-1 {
-	float: left;
-	width: 380px;
-	margin-left: 30px;
-}
-
-.column-3 {
-	width: 1200px;
-	margin-left: 30px;
-}
-
-body > header {
-	background-color: #6AC05C;
-	color: #fff;
-	padding: 16px;
-}
-body > header h1 {
-	font-weight: normal;
-	font-size: 64px;
-	text-transform: lowercase;
-	margin: 0;
-}
-body > header p {
-	margin: 12px 0;
-}
-body > header h1 span {
-	font-weight: 100;
-}
-
-section h1 {
-	font-family: 'Roboto Slab';
-	font-size: 32px;
-	font-weight: normal;
-}
-section section h1 {
-	font-family: 'Roboto';
-	font-size: 22px;
-	border-left: none;
-	padding: 0;
-	margin: 0;
-}
-
-li.sample {
-margin-bottom: 16px;
-}
-li.sample h1 {
-	font-family: 'Roboto';
-	font-size: 17px;
-	border-bottom: none;
-	margin: 0;
-}
-li.sample p {
-	margin: 4px 0;
-	color: #777;
-	font-size: 14px;
-}
-
-main {
-	margin-left: -30px;
-	width: 1230px;
-	margin: 0 auto;
-}
-
-ul {
-	list-style-type: none;
-	padding: 0;
-}
-
-a {
-	color: #1F9680;
-	text-decoration: none;
-}
-		</style>
-	</head>
-	<body>
-		<header>
-			<div class="row">
-				<div class="column-3">
-					<h1><span>C++</span>​Samples</h1>
-					<p>A repository of modern C++ code samples curated by the community.</p>
-				</div>
-			</div>
-		</header>
-		<main class="row">
+---
+layout: index
+---
 			<section>
 				<h1 class="column-3">Common tasks</h1>
 				<section class="column-1">
@@ -158,6 +59,3 @@ a {
 					</ul>
 				</section>
 			</section>
-		</main>
-	</body>
-</html>
