--- a/_sample.html
+++ b/_sample.html
@@ -5,4 +5,10 @@ layout: index
 				<div class="row">
 					<h1 class="column-3">{{ page.sample.title }}</h1>
 				</div>
+				<div class="row">
+					<pre class="column-3">{{ page.sample.code | escape }}</pre>
+				</div>
+				<div class="row">
+					<pre class="column-3">{{ page.sample.description }}</pre>
+				</div>
 			</section>
