Link sample index through to samples

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: index
 						<ul>
 {% for sample in section[1] %}
 							<li class="sample">
-								<h1><a href="#">{{ sample.title }}</a></h1>
+								<h1><a href="{{ site.baseurl }}{{ sample.path }}.html">{{ sample.title }}</a></h1>
 								<p>Extract a sequence of integer values from a stream and push them into a container.</p>
 							</li>
 {% endfor %}
