Use Ubuntu Mono for code

--- a/_sample.html
+++ b/_sample.html
@@ -6,9 +6,9 @@ layout: index
 					<h1 class="column-3">{{ page.sample.title }}</h1>
 				</div>
 				<div class="row">
-					<pre class="column-3">{{ page.sample.code | escape }}</pre>
+					<pre class="column-3"><code>{{ page.sample.code | escape }}</code></pre>
 				</div>
 				<div class="row">
-					<pre class="column-3">{{ page.sample.description }}</pre>
+					<p class="column-3">{{ page.sample.description }}</p>
 				</div>
 			</section>
