Add custom code block tag with line numbers

--- a/_sample.html
+++ b/_sample.html
@@ -7,7 +7,7 @@ layout: index
 				</div>
 				<div class="row">
 					<div class="column-3">
-						{% highlight cpp %}{{ page.sample.code }}{% endhighlight %}
+						{% codeblock cpp %}{{ page.sample.code }}{% endcodeblock %}
 					</div>
 				</div>
 				<div class="row">
