Add sample info area to sample page

--- a/_sample.html
+++ b/_sample.html
@@ -11,8 +11,21 @@ layout: index
 					</div>
 				</div>
 				<div class="row">
-					<div class="column-3">
+					<div class="column-2">
 						{{ page.sample.description | markdownify }}
 					</div>
+					<section class="column-1 sample-info">
+						<h1>Sample info</h1>
+						<h2>Contributors</h2>
+						<ul class="contributors">
+							<li><a href="#"><img src="https://avatars.githubusercontent.com/u/32490?v=3" alt="Joseph Mansfield"></a></li>
+							<li><a href="#"><img src="https://avatars.githubusercontent.com/u/32490?v=3" alt="Joseph Mansfield"></a></li>
+							<li><a href="#"><img src="https://avatars.githubusercontent.com/u/32490?v=3" alt="Joseph Mansfield"></a></li>
+						</ul>
+						<h2>Source</h2>
+						<p><a href="#">Fork this sample on GitHub</a></p>
+						<h2>Last Updated</h2>
+						<p>14th February 2015</p>
+					</section>
 				</div>
 			</section>
