--- a/_sample.html
+++ b/_sample.html
@@ -25,7 +25,7 @@ layout: index
 						<h2>Source</h2>
 						<p><a href="#">Fork this sample on GitHub</a></p>
 						<h2>Last Updated</h2>
-						<p>14th February 2015</p>
+						<p>{{ page.sample.modified_date | date_to_long_string }}</p>
 					</section>
 				</div>
 			</section>
