Convert line number references in sample descriptions

--- a/_sample.html
+++ b/_sample.html
@@ -12,7 +12,7 @@ layout: index
 				</div>
 				<div class="row">
 					<div class="column-2">
-						{{ page.sample.description | sample_markdown }}
+						{{ page.sample | sample_description }}
 					</div>
 					<section class="column-1 sample-info">
 						<h1>Sample info</h1>
