Place every 3 samples in separate rows

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ layout: default
 {% endfor %}
 						</ul>
 					</section>
+				{% cycle '', '', '</div><div class="row">' %}
 {% endfor %}
 				</div>
 {% endfor %}
