--- a/_sample.html
+++ b/_sample.html
@@ -83,6 +83,9 @@ document.addEventListener('DOMContentLoaded', function() {
 						<p><a href="#">Fork this sample on GitHub</a></p>
 						<h2>Last Updated</h2>
 						<p>{{ page.sample.modified_date | date_to_long_string }}</p>
+{% if site.environment == 'production' %}
+						<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-6789411983750873" data-ad-slot="5581833133" data-ad-format="rectangle"></ins>
+{% endif %}
 					</section>
 				</div>
 			</section>
