--- a/_sample.html
+++ b/_sample.html
@@ -58,7 +58,7 @@ document.addEventListener('DOMContentLoaded', function() {
 	}
 }, false);
 			</script>
-			<section>
+			<section class="sample">
 				<div class="row">
 					<h1 class="column-6">{{ page.sample.title }}</h1>
 				</div>
@@ -68,22 +68,19 @@ document.addEventListener('DOMContentLoaded', function() {
 					</div>
 					<div class="column-3">
 						{{ page.sample | sample_description }}
-						<section class="sample-info">
-							<h1>Sample info</h1>
-							<h2>Contributors</h2>
-							<ul class="contributors">
+						<h2>Contributors</h2>
+						<ul class="contributors">
 	{% for contributor in page.sample.contributors %}
-								<li><a title="{{ contributor.name }}" {% if contributor.url %}href="{{ contributor.url }}"{% endif %}><img src="{{ contributor.image }}" alt="{{ contributor.name }}"></a></li>
+							<li><a title="{{ contributor.name }}" {% if contributor.url %}href="{{ contributor.url }}"{% endif %}><img src="{{ contributor.image }}" alt="{{ contributor.name }}"></a></li>
 	{% endfor %}
-							</ul>
-							<h2>Source</h2>
-							<p><a href="#">Fork this sample on GitHub</a></p>
-							<h2>Last Updated</h2>
-							<p>{{ page.sample.modified_date | date_to_long_string }}</p>
+						</ul>
+						<h2>Source</h2>
+						<p><a href="#">Fork this sample on GitHub</a></p>
+						<h2>Last Updated</h2>
+						<p>{{ page.sample.modified_date | date_to_long_string }}</p>
 	{% if site.environment == 'production' %}
-							<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-6789411983750873" data-ad-slot="5581833133" data-ad-format="rectangle"></ins>
+						<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-6789411983750873" data-ad-slot="5581833133" data-ad-format="rectangle"></ins>
 	{% endif %}
-						</section>
 					</div>
 				</div>
 			</section>
