Add link back to samples index

--- a/_sample.html
+++ b/_sample.html
@@ -60,7 +60,10 @@ document.addEventListener('DOMContentLoaded', function() {
 			</script>
 			<section class="sample">
 				<div class="row">
-					<h1 class="column-4">{{ page.sample.title }}</h1>
+					<div class="column-4">
+						<a href="/">← Samples</a>
+						<h1>{{ page.sample.title }}</h1>
+					</div>
 				</div>
 				<div class="row">
 					<div class="column-2">
