Fix featured sample link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 			<section class="sample featured">
 				<div class="row">
-					<h1 class="column-4">Featured sample: <a href="#">{{ page.random_sample.title }}</a></h1>
+					<h1 class="column-4">Featured sample: <a href="{{ site.baseurl }}{{ page.random_sample.path}}.html">{{ page.random_sample.title }}</a></h1>
 				</div>
 				<div class="row">
 					<div class="column-2">
