--- a/_sample.html
+++ b/_sample.html
@@ -89,4 +89,18 @@ document.addEventListener('DOMContentLoaded', function() {
 	{% endif %}
 					</div>
 				</div>
+				<div class="row">
+					<div class="column-4">
+						<div id="disqus_thread"></div>
+						<script type="text/javascript">
+var disqus_shortname = 'cppsamples';
+
+(function() {
+	var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+	dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+	(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+})();
+						</script>
+					</div>
+				</div>
 			</section>
