--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@ layout: default
 					</div>
 				</div>
 			</section>
+{% if site.environment == 'production' %}
+			<div class="row">
+				<div class="column-4">
+					<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-6789411983750873" data-ad-slot="4105099934" data-ad-format="auto"></ins>
+				</div>
+			</div>
+{% endif %}
 			<section>
 {% for category in page.sample_categories %}
 {% assign outerloop = forloop %}
