Link samples to source on GitHub

--- a/_sample.html
+++ b/_sample.html
@@ -84,7 +84,7 @@ document.addEventListener('DOMContentLoaded', function() {
 	{% endfor %}
 						</ul>
 						<h2>Source</h2>
-						<p><a href="#">Fork this sample on GitHub</a></p>
+						<p><a href="https://github.com/sftrabbit/CppSamples-Samples/tree/master/{{ page.sample.file_name }}">Fork this sample on GitHub</a></p>
 						<h2>Last Updated</h2>
 						<p>{{ page.sample.modified_date | date_to_long_string }}</p>
 					</div>
