Add social buttons to footer

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+description: A repository of modern and idiomatic C++ code samples curated by the community.
 ---
 
 			<section class="sample featured">
