Use site.baseurl correctly

--- a/_sample.html
+++ b/_sample.html
@@ -61,7 +61,7 @@ document.addEventListener('DOMContentLoaded', function() {
 			<section class="sample">
 				<div class="row">
 					<div class="column-4">
-						<a href="/">← Samples</a>
+						<a href="{{ site.baseurl }}/">← Samples</a>
 						<h1>{{ page.sample.title }}</h1>
 					</div>
 				</div>
