Add public domain statement below sample code

--- a/_sample.html
+++ b/_sample.html
@@ -68,6 +68,7 @@ document.addEventListener('DOMContentLoaded', function() {
 				<div class="row">
 					<div class="column-2">
 						{% codeblock cpp %}{{ page.sample.code }}{% endcodeblock %}
+						<p class="license">This sample is licensed under the <a href="http://creativecommons.org/publicdomain/zero/1.0/">CC0 Public Domain Dedication</a>.</p>
 					</div>
 					<div class="column-2">
 						<h2>Intent</h2>
