--- a/_sample.html
+++ b/_sample.html
@@ -74,6 +74,13 @@ document.addEventListener('DOMContentLoaded', function() {
 						<h2>Intent</h2>
 						{{ page.sample | sample_intent }}
 						<h2>Description</h2>
+{% if page.sample.tags.size > 0 %}
+						<ul class="tags">
+{% for tag in page.sample.tags %}
+							<li class="{{ tag }}">{{ tag }}</li>
+{% endfor %}
+						</ul>
+{% endif %}
 						{{ page.sample | sample_description }}
 						<div class="subrow">
 							<div class="column-1">
