Fix index CSS on mobile

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ description: A repository of modern and idiomatic C++ code samples curated by th
 	{% for section in category[1] %}
 		{% assign groupname = forloop.index %}
 				<section class="samples-section">
-					<div class="row">
+					<div class="samples-section-header row">
 						<h1 class="column-4">{{ section[0].title }}</h1>
 					</div>
 					<div class="row">
