--- a/index.html
+++ b/index.html
@@ -67,3 +67,55 @@ description: A repository of modern and idiomatic C++ code samples curated by th
 	{% endfor %}
 {% endfor %}
 			</section>
+			<section class="search-results">
+				<div class="row">
+					<h1 class="column-4">Search Results</h1>
+				</div>
+				<section id="results" class="samples-section"></div>
+			</section>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+			<script>
+function filterSamples(event) {
+	var query = $('#search').val().toLowerCase();
+
+	if (query.length > 0) {
+		$('.featured').fadeOut(200);
+		$('.samples-index').fadeOut(200, function() {
+			$('.search-results').fadeIn(200);
+		});
+
+		$("#results").empty();
+
+		var matchingItems = $('.index-item').filter(function() {
+			var content = $(this).text().toLowerCase();
+
+			return content.indexOf(query) != -1;
+		}).clone();
+
+		var rows = [];
+
+		if (matchingItems.length > 0) {
+			matchingItems.each(function(index) {
+				if (index % 4 == 0) {
+					rows.push($('<div class="row"></div>'));
+				}
+
+				rows[rows.length - 1].append($(this));
+			});
+		} else {
+			rows.push($('<div class="row"><div class="column-4"><p>No samples found matching your query.</p></div></div>'));
+		}
+
+		$("#results").append(rows);
+	} else {
+		$('.search-results').fadeOut(200, function() {
+			$('.featured').fadeIn(200);
+			$('.samples-index').fadeIn(200);
+		});
+	}
+}
+
+$(function() {
+	$('#search').on('input', filterSamples);
+});
+			</script>
