Add "Continue reading" button to code preview

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@ description: A repository of modern and idiomatic C++ code samples curated by th
             <a href="{{ site.baseurl }}/{{ page.random_sample.path}}.html">
               {% codeblock cpp %}{{ page.random_sample.code }}{% endcodeblock %}
             </a>
+            <div class="code-overlay">
+              <a href="{{ site.baseurl }}/{{ page.random_sample.path}}.html" class="code-overlay">
+                Continue reading →
+              </a>
+            </div>
           </div>
           <div class="column-2">
             <h2>Intent</h2>
